--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.2
+  path_provider: ^2.1.5
+  sqflite: ^2.4.2
+  path: ^1.9.1
+  flutter_riverpod: ^2.6.1
+  sqflite_common_ffi: ^2.3.5
 
 dev_dependencies:
   flutter_test:
